--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "db-utils"
+name = "utils"
 version = "0.1.0"
-description = "Database utilities"
+description = "Utilities for database access with an optional FastAPI CRUD router"
 requires-python = ">=3.11"
 dependencies = [
     "sqlmodel>=0.0.27",
@@ -9,9 +9,14 @@ dependencies = [
     "psycopg2-binary>=2.9.0",
 ]
 
+[project.optional-dependencies]
+api = [
+    "fastapi>=0.110.0",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/db_utils"]
+packages = ["src/utils"]
