--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ dependencies = [
     "sqlmodel>=0.0.27",
     "sqlalchemy>=2.0.0",
     "psycopg2-binary>=2.9.0",
+    "python-dotenv",
+    "mysql-connector-python"
 ]
 
 [project.optional-dependencies]
